# HexaScan

./: .gitignore  README.md  ecosystem.config.js  package.json  update-agent.sh
agent/: check-baseline-permissions.sh  diagnose-filesystem-write.sh  fix-schedule.sh  pyproject.toml  requirements.txt
agent/config/: agent.example.yaml
agent/hexascan_agent/: __init__.py  agent.py
agent/hexascan_agent/checks/: __init__.py  base.py  registry.py
agent/hexascan_agent/checks/browser/: __init__.py  critical_flows_check.py
agent/hexascan_agent/checks/cms/: __init__.py  magento_health_check.py  wordpress_health_check.py
agent/hexascan_agent/checks/custom/: __init__.py  custom_script_check.py
agent/hexascan_agent/checks/files/: __init__.py  filesystem_integrity_check.py
agent/hexascan_agent/checks/logs/: __init__.py  log_monitor_check.py
agent/hexascan_agent/checks/system/: __init__.py  cpu_check.py  disk_check.py  memory_check.py  system_health_check.py
agent/hexascan_agent/communication/: __init__.py  api_client.py  exceptions.py
agent/hexascan_agent/config/: __init__.py  loader.py
agent/scripts/: install.sh
backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  fix-migration.sql  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: generate-secrets.js
backend/src/: app.ts  index.ts
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js
(+234 files in other folders)
